# Reconstrucci-n-de-Im-genes

./: .gitignore  CMakeLists.txt  ConsoleApplication1.cpp  ConsoleApplication1.sln  README.md  Requisitos_Reconstruccion_Imagen.md  bmphandler.cpp  bmphandler.h  ejecutar_programa.bat  image_utils.cpp  imageprocessor.cpp  imageprocessor.h  main.cpp  reconstructor.cpp  reconstructor.h  untitled.pro  untitled1.pro
docs/: algoritmos.md
